tests/paczka1/fuzzy1/69068881.err
Error in line 8: WOCSxu A242 41,2
Error in line 6: A242 A287 20,7
Error in line 12: WOCSxu A111 19,2
Error in line 4: niuvX7DsUH A676 38,2
Error in line 7: psir7oL3Lb0 A676 87,1
Error in line 18: niuvX7DsUH A242 43,0
Error in line 27: niuvX7DsUH A287 806,5
Error in line 30: A242 A111 21,8
Error in line 31: niuvX7DsUH A676 42,9
